--- a/styles/pageLayout.css
+++ b/styles/pageLayout.css
@@ -31,10 +31,8 @@ body {
 
     flex-basis: 6%;
 
-    border-bottom-style: solid;
-    border-top-style: solid;
-    border-bottom-width: 0.1vw;
-    border-top-width: 0.1vw;
+    border-style: solid;
+    border-width: 0.1vw;
 }
 
 .menubutton {
@@ -47,15 +45,9 @@ body {
     padding-right: 1vw;
 
     font-size: 2vw;
-    cursor: pointer;
 
     border-left-style: solid;
     border-width: 0.1vw;
-}
-
-.menubutton:hover {
-    text-decoration: underline;
-    background: rgb(66, 66, 66);
 }
 
 .menubutton:last-child {
@@ -69,6 +61,10 @@ body {
     justify-content: flex-start;
 
     flex-basis: 94%;
+
+    border-style: solid;
+    border-top-style: none;
+    border-width: 0.1vw;
 }
 
 #mainTab {
@@ -87,6 +83,8 @@ body {
 
     border-right-style: solid;
     border-right-width: 0.1vw;
+    border-left-style: solid;
+    border-left-width: 0.1vw;
 
     overflow:auto;
 }
@@ -96,6 +94,26 @@ body {
 
     padding-left: 0.2vw;
     width: 100%;
+
+    min-height: 2vw;
+}
+
+#itemList {
+    overflow:auto;
+}
+
+.itemLI {
+    text-align: center;
+
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
+
+    border-style: solid;
+    border-width: 0.1vw;
+}
+
+.itemPrice {
+    font-size: 0.8vw;
 }
 
 #recipeTree {
@@ -118,6 +136,9 @@ body {
 
 #recipeList {
     flex-basis: 20%;
+
+    border-right-style: solid;
+    border-right-width: 0.1vw;
 
     overflow: auto;
 }
