--- a/styles/pageLayout.css
+++ b/styles/pageLayout.css
@@ -50,6 +50,11 @@ body {
     border-width: 0.1vw;
 }
 
+.menubutton:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .menubutton:last-child {
     border-right-style: solid;
     border-width: 0.1vw;
@@ -65,6 +70,12 @@ body {
     border-style: solid;
     border-top-style: none;
     border-width: 0.1vw;
+}
+
+.header {
+    font-size: 1.3vw;
+    text-decoration: underline;
+    text-align: center;
 }
 
 #mainTab {
