--- a/styles/general.css
+++ b/styles/general.css
@@ -3,3 +3,27 @@
 .small {
     font-size: 0.8vw;
 }
+
+.fancyListItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    text-align: center;
+
+    padding-top: 0.5vw;
+    padding-bottom: 0.5vw;
+
+    border-style: solid;
+    border-width: 0.1vw;
+}
+
+.fancyInput {
+    display: block;
+
+    font-size: 1.2vw;
+
+    padding-left: 0.2vw;
+
+    min-height: 2vw;
+}
