--- a/styles/pageLayout.css
+++ b/styles/pageLayout.css
@@ -100,27 +100,8 @@ body {
     overflow:auto;
 }
 
-#itemSearchBar {
-    font-size: 1.2vw;
-
-    padding-left: 0.2vw;
-    width: 100%;
-
-    min-height: 2vw;
-}
-
 #itemList {
     overflow:auto;
-}
-
-.itemLI {
-    text-align: center;
-
-    padding-top: 0.5vw;
-    padding-bottom: 0.5vw;
-
-    border-style: solid;
-    border-width: 0.1vw;
 }
 
 .itemPrice {
@@ -160,4 +141,19 @@ body {
     justify-content: flex-start;
 
     width: 100%;
+}
+
+#settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    flex-basis: 15%;
+
+    border-right-style: solid;
+    border-right-width: 0.1vw;
+    border-left-style: solid;
+    border-left-width: 0.1vw;
+
+    overflow:auto;
 }
