--- a/styles/general.css
+++ b/styles/general.css
@@ -6,7 +6,7 @@
 
 .fancyListItem {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
     text-align: center;
@@ -24,6 +24,6 @@
     font-size: 1.2vw;
 
     padding-left: 0.2vw;
-
+    border-width: 0.05vw;
     min-height: 2vw;
 }
