--- a/styles/general.css
+++ b/styles/general.css
@@ -6,7 +6,7 @@
 
 .fancyListItem {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     text-align: center;
