--- a/styles/pageLayout/generalLayout.css
+++ b/styles/pageLayout/generalLayout.css
@@ -1,6 +1,7 @@
 * {
     overflow: hidden;
-    font-size: 1vw;
+    font-size: 1.1vw;
+    font-family: Helvetica;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
